# stm32f4demo

./: .gitignore  CMakeLists.txt  FreeRTOS  LICENSE  README.md
conf/: FreeRTOSConfig.h  appConfig.h  stm32f4xx_conf.h  stm32f4xx_it.c  stm32f4xx_it.h
lib/CMSIS/inc/: stm32f4xx.h
lib/CMSIS/src/: system_stm32f4xx.c
lib/STM32F4xx_StdPeriph_Driver/src/: stm32f4xx_fmc.c  stm32f4xx_fsmc.c  stm32f4xx_qspi.c
scripts/: clearMakeFiles.sh  postbuild.sh
src/: irq.c  irq.h  main.c  main.h  utils.h
src/engine/: i2c.c  i2c.h  init.c  init.h  irq.c  irq.h  th06.c  th06.h  time.c  time.h  utils.c  utils.h
